# neoqlang

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IGQK_V4_QUICK_START.md  IMPLEMENTIERUNGS_CHECKLISTE_V4.md  LICENSE  README.md  SCHNELL_ÜBERSICHT_V4.md  checklist.md  pyproject.toml  requirements.txt  setup.py  spec.md  tasks.md
.claude/: settings.local.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: node-ci.yml  python-ci.yml  qlang-ci.yml
IGQK_Complete_Package/: ANWENDUNGSFÄLLE.md  EINFACH_ERKLÄRT.md  IGQK_EXPLANATION_ARCHITECTURE.md  IGQK_EXPLANATION_CONCEPTS.md  IGQK_EXPLANATION_MATH.md  IGQK_FRAMEWORK_EXPLANATION.md  IGQK_PROJECT_SUMMARY.md  IGQK_Paper.md  IGQK_TEST_REPORT.md  IGQK_V2_KONZEPT.md  IGQK_V3_SAAS_KONZEPT.md  IHRE_FRAGEN_BEANTWORTET.md  PACKAGE_CONTENTS.txt  README.md  README.txt  README_PACKAGE.md  SCHNELLSTART.md  STARTEN.bat  STATUS.md  UNTERSTÜTZTE_MODELLE.md  VALIDATION_REPORT.md  WAS_SIE_ERHALTEN.md  ai_analysis.md  critical_analysis.md  final_evaluation.md  final_roadmap.md  igqk_theory_development.md  improvement_proposal.md  novel_mathematical_frameworks.md  paper_analysis.md  research_questions.md  theoretical_roadmap.md
IGQK_Complete_Package/igqk/: DEMO_STARTEN.bat  README.md  START_ALL.bat  START_SYSTEM.py  START_UI.bat  WIE_STARTEN.md  benchmark_performance.py  demo_automatisch.py  demo_einfach.py  monitor_training.py  requirements.txt  setup.py  test_basic.py  test_integration.py  test_mnist_demo.py  test_real_mnist.py  ui_dashboard.py
IGQK_Complete_Package/igqk_saas/: .env.example  ALLE_VERBESSERUNGEN_KOMPLETT.md  Dockerfile  HUGGINGFACE_INTEGRATION.md  LIVE_SYSTEM_READY.md  NEUE_FEATURES_AKTIVIERT.md  NEUSTART.bat  PRODUCTION_DEPLOYMENT.md  README.md  SCHNELLSTART_SAAS.md  SCHNELL_TESTEN.md  SEARCH_DOWNLOAD_JETZT_VERFUEGBAR.md  SO_SIEHT_ES_AUS.md  START_SAAS.bat  STATUS_SAAS.md  SYSTEM_GESTARTET.md  SYSTEM_STATUS.md  WO_FINDE_ICH_HUGGINGFACE.md  check_status.bat  deploy.bat  deploy.sh  docker-compose.yml  kill_frontend.bat  manage.bat  test_huggingface.py  web_ui.py
IGQK_Complete_Package/igqk_v4/: README.md  START_V4.bat  START_V4.py  requirements.txt
docs/: claude-code-cli-top-repos.md
examples/: mnist_example.py
igqk/: __init__.py
igqk/compression/: __init__.py  projection.py
igqk/core/: __init__.py  evolution.py  manifold.py  measurement.py  quantum_state.py
igqk/integration/: __init__.py  pytorch.py
qlang/: .gitignore  CHANGELOG.md  Cargo.toml  MEMORY.md  QLANG-STATUS.md  QO-STATUS.md  README.md  docker-compose.yml  ops_executor.txt
qlang/.github/: dependabot.yml
qlang/.playwright-mcp/: page-2026-04-09T10-39-15-669Z.yml  page-2026-04-09T10-39-25-491Z.yml  page-2026-04-09T10-39-35-642Z.yml  page-2026-04-09T10-44-21-061Z.yml  page-2026-04-09T10-45-20-443Z.yml  page-2026-04-09T10-46-30-686Z.yml  (+5 more)
qlang/crates/qlang-agent/: Cargo.toml
qlang/crates/qlang-agent/src/: bridge.rs  bus.rs  compose.rs  distributed.rs  kubernetes.rs  lib.rs  negotiate.rs  protocol.rs  server.rs
qlang/crates/qlang-compile/: Cargo.toml
qlang/crates/qlang-compile/src/: aligned.rs  aot.rs  codegen.rs  lib.rs  lsp.rs  main.rs  matmul_jit.rs  modules.rs  onnx.rs  optimize.rs  parser.rs  repl.rs  script_jit.rs  selfhost.rs  simd.rs  wasm.rs
qlang/crates/qlang-runtime/: Cargo.toml
qlang/crates/qlang-runtime/examples/: ff_gpu_bench.rs  mnist_evolution.rs  qlms_benchmark.rs  qlms_handshake.rs
qlang/crates/qlang-runtime/src/: accel.rs  anthropic_client.rs  autograd.rs  bitnet_math.rs  bytecode.rs  candle_train.rs  checkpoint.rs  cifar10.rs  cifar10_features.rs  cloud_http.rs  concurrency.rs  config.rs  debugger.rs  diagnostics.rs  diffusion.rs  distributed_train.rs  executor.rs  federation.rs  fisher.rs  forward_forward.rs  forward_forward_gpu.rs  gemini_client.rs  gpu_compute.rs  gpu_mamba.rs  gpu_runtime.rs  gpu_train.rs  graph_ff_train.rs  graph_ops.rs  groq_client.rs  hdc.rs  hebbian.rs  hub.rs  igqk.rs  igqk_compress.rs  lib.rs  lm_export.rs  mamba.rs  mamba_train.rs  mnist.rs  neurosymbolic.rs  (+31 more)
qlang/crates/qlang-runtime/src/evolution/: daemon.rs  fitness.rs  lifecycle.rs  mod.rs  mutation.rs  real_daemon.rs
qlang/crates/qlang-runtime/tests/: cifar10_brain.rs  cifar10_conv_brain.rs  cifar10_features_brain.rs  cifar10_vit_brain.rs  executor_transformer.rs  federated_organism.rs  full_system_test.rs  integration_evolution.rs  integration_organism.rs  integration_qlms.rs  lm_bptt.rs  lm_bptt_big.rs  lm_production.rs  lm_real_training.rs  organism_alive.rs  qlang_ensemble_graph.rs  real_mnist_brain.rs  real_mnist_ff.rs  spiking_mnist.rs  tokenizer_roundtrip.rs  training_benchmark.rs
qlang/frontend/: index.html  (+3 more)
qlang/qo/qo-agents/: Cargo.toml
qlang/qo/qo-agents/src/: agent.rs  executor.rs  goal.rs  lib.rs  llm_node.rs  qlang_model.rs  registry.rs  tools.rs
qlang/qo/qo-consciousness/: Cargo.toml
qlang/qo/qo-consciousness/src/: lib.rs  state_machine.rs  stream.rs
qlang/qo/qo-embed/: Cargo.toml
qlang/qo/qo-embed/src/: embed_data.rs  lib.rs  vision.rs  vision_resnet.rs
qlang/qo/qo-evolution/: Cargo.toml
qlang/qo/qo-evolution/src/: lib.rs  pattern.rs  proposal.rs  quantum.rs
qlang/qo/qo-llm/: Cargo.toml
qlang/qo/qo-llm/src/: cloud.rs  config.rs  groq.rs  lib.rs  ollama.rs  router.rs
qlang/qo/qo-memory/: Cargo.toml
qlang/qo/qo-memory/src/: context.rs  embeddings.rs  graph_builders.rs  graph_store.rs  hnsw.rs  import.rs  lib.rs  obsidian.rs  store.rs
qlang/qo/qo-server/: Cargo.toml
qlang/qo/qo-server/src/: auth.rs  lib.rs
qlang/qo/qo-server/src/routes/: agents.rs  chat.rs  consciousness.rs  demo.rs  evolution.rs  evolution_daemon.rs  goals.rs  gpu_training.rs  graphs.rs  health.rs  history.rs  memory.rs  messages.rs  mod.rs  neo.rs  organism.rs  proof.rs  providers.rs  qlms_demo.rs  qlms_federation.rs  simulation.rs  spiking.rs  train_monitor.rs  training.rs
qlang/qo/qo-simulation/: Cargo.toml
qlang/qo/qo-simulation/src/: lib.rs  predictor.rs  scenario.rs  simulator.rs
qlang/qo/qo-telegram/: Cargo.toml
qlang/qo/qo-telegram/src/: bot.rs  lib.rs
tests/: test_igqk.py
(+181 files in other folders)
