[package]
name = "qlang-agent"
version.workspace = true
edition.workspace = true
description = "QLANG agent interface - AI-to-AI graph communication"

[dependencies]
bincode = "1.3"
qlang-core = { workspace = true }
qlang-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.51.0", features = ["full"] }
tracing = { workspace = true }
