[package]
name = "qlang-runtime"
version.workspace = true
edition.workspace = true
description = "QLANG runtime - Graph executor and scheduler"

[features]
default = []
gpu = ["wgpu", "pollster"]
cuda = ["tch"]
mlx = ["mlx-rs"]
tls = ["rustls", "webpki-roots"]

[dependencies]
qlang-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = "1.10"
redb = { workspace = true }
bincode = "3.0"
tokio = { workspace = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

tch = { version = "0.24", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mlx-rs = { version = "0.25", features = ["metal", "accelerate"], optional = true }
