[package]
name = "qo-embed"
version.workspace = true
edition.workspace = true
description = "QO embedding model — all-MiniLM-L6-v2 in pure Rust via candle"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.4"
tokenizers = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = "1.10"
