[package]
name = "qo-evolution"
version.workspace = true
edition.workspace = true
description = "QO evolution — pattern recognition, proposals, quantum state"

[dependencies]
qo-values = { path = "../qo-values" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
