[package]
name = "qo-llm"
version.workspace = true
edition.workspace = true
description = "QO tiered LLM routing — local → Groq → Cloud"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
