[package]
name = "qo-memory"
version.workspace = true
edition.workspace = true
description = "QO memory — Obsidian vault + HNSW vector store + redb"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3"
