[package]
name = "qo-simulation"
version.workspace = true
edition.workspace = true
description = "QO simulation — MiroFish-inspired scenario prediction"

[dependencies]
qo-values = { path = "../qo-values" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
