[package]
name = "qo-telegram"
version.workspace = true
edition.workspace = true
description = "QO Telegram bot — chat and goals from Telegram"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
